--- a/test/fixtures/org_users.yml
+++ b/test/fixtures/org_users.yml
@@ -4,8 +4,5 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
+one: {org_id: 1, user_id: 1}
 # column: value
