added fixtures and fixed Minitest version due to upstream bug

--- a/test/fixtures/org_users.yml
+++ b/test/fixtures/org_users.yml
@@ -4,5 +4,6 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {org_id: 1, user_id: 1}
-# column: value
+one:
+  org_id: 1
+  user_id: 1
