--- a/test/fixtures/orgs.yml
+++ b/test/fixtures/orgs.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-org_one: {name: "Organization A"}
+org_one:
+  name: "Organization A"
 # column: value
 #
-org_two: {name: "Organization B"}
+org_two:
+  name: "Organization B"
 # column: value
