--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-
-activity_one:
-  title: "activity 1"
-  practice: practice_one
+# activity_one:
+#   title: "activity 1"
+#   practice: practice_one
