--- a/test/fixtures/org_users.yml
+++ b/test/fixtures/org_users.yml
@@ -1,9 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+ou_one:
+  org: org_one
+  user: user_one
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one:
-  org_id: 1
-  user_id: 1
+ou_two:
+  org: org_one
+  user: user_two
