--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,28 @@
 image: "ruby:2.3"
 
 stages:
-  - build
   - test
   - deploy
 
 before_script:
-  - apt-get update -qq && apt-get install -y -qq ruby-dev nodejs libsqlite3-dev
+  - apt-get update -qq && apt-get install -y -qq ruby-dev nodejs libsqlite3-dev graphviz
   - ruby -v
   - which ruby
   - gem install bundler --no-ri --no-rdoc
-
-build:
-  stage: build
-  script:
-    - "echo 'It is built now!'"
 
 tests:
   stage: test
   script:
     - RAILS_ENV=test bundle install --jobs $(nproc) "${FLAGS[@]}"
-    - RAILS_ENV=test bundle exec rake db:migrate
-    - RAILS_ENV=test bundle exec rake db:seed
+    - RAILS_ENV=test bundle exec rails db:migrate
+    - RAILS_ENV=test bundle exec rails db:seed
     - bundle exec rails test
   coverage: '/Coverage.*?\d+\s*\/\s*\d+\s*LOC\s*\((.*?%)\)\s*covered\./'
 
 rubocop:
   stage: test
   script:
+    - bundle install
     - bundle exec rubocop
   allow_failure: true
 
