--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,13 @@ stages:
   - test
   - deploy
 
-before_script:
-  - apt-get update -qq && apt-get install -y -qq ruby-dev nodejs libsqlite3-dev graphviz
-  - ruby -v
-  - which ruby
-  - gem install bundler --no-ri --no-rdoc
-
 test:
   stage: test
+  before_script:
+    - apt-get update -qq && apt-get install -y -qq ruby-dev nodejs libsqlite3-dev graphviz
+    - ruby -v
+    - which ruby
+    - gem install bundler --no-ri --no-rdoc
   script:
     - bundle install --jobs $(nproc) "${FLAGS[@]}"
     - bundle exec rails db:migrate
@@ -28,6 +27,7 @@ rubocop:
 
 deploy_to_uat:
   stage: deploy
+  image: "ubuntu:rolling"
   environment:
     name: uat
     url: https://uat.prodexity.com/bsimmcalc
@@ -45,6 +45,7 @@ deploy_to_uat:
 
 deploy_to_prod:
   stage: deploy
+  image: "ubuntu:rolling"
   environment:
     name: production
     url: https://bsimmcalc.prodexity.com
